changed the way jumbotron is displated (centered, now)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,13 +9,15 @@
 </head>
 <body>
 <div id="app">
-    <div class="jumbotron">
-        <h1 class="display-4">audiopyle</h1>
-        <hr class="my-4">
-        <p class="lead">audio feature extraction engine based on standard VAMP plugins</p>
-        <a class="btn btn-primary btn-sm" href="https://emkor.github.io/audiopyle/api" role="button">API reference</a>
-        <a class="btn btn-primary btn-sm" href="https://www.vamp-plugins.org/" role="button">VAMP plugins reference</a>
-        <a class="btn btn-primary btn-sm" href="https://github.com/emkor/audiopyle" role="button">Code on GitHub</a>
+    <div class="container">
+        <div class="jumbotron">
+            <h1 class="display-4">audiopyle</h1>
+            <hr class="my-4">
+            <p class="lead">audio feature extraction engine based on standard VAMP plugins</p>
+            <a class="btn btn-primary btn-sm" href="https://emkor.github.io/audiopyle/api" role="button">API reference</a>
+            <a class="btn btn-primary btn-sm" href="https://www.vamp-plugins.org/" role="button">VAMP plugins reference</a>
+            <a class="btn btn-primary btn-sm" href="https://github.com/emkor/audiopyle" role="button">Code on GitHub</a>
+        </div>
     </div>
     <div class="container">
 
