--- a/frontend/index.html
+++ b/frontend/index.html
@@ -398,6 +398,7 @@
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="node_modules/vue/dist/vue.min.js"></script>
+<script src="util_lib.js"></script>
 <script src="api_lib.js"></script>
 <script src="app.js"></script>
 </body>
